2006-04-22  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: 
	* graphics.c:
	* graphics.h:
	* properties.h:
	* properties.c: Load only one set of graphics at a time. Use
	GamesFileList to create the list of themes. Allow all image 
	formats to be used (including SVG, but also, unfortunately, the 
	bubble-graphics).

	* ufo.svg:
	* robots.svg:
	* boo.svg:
	* Makefile.am: Add Nicu's SVG themes.

2006-04-20  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.schemas.in: 
	* gnobots.c:
	* gbdefs.h:
	* game.c:
	* properties.c:
	* graphics.h: 
	* graphics.c: Make the graphics scalable. Nothing fancy. We even
	keep the old drawing engine. Also no SVG support.

2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* menu.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c  : Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-02  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Remove libgnomeui/gnome-window-icon.h from the
	includes.

	* Makefile.am: Move the icon cache update down the build tree.

2006-03-31  Callum McKenzie  <callum@spooky-possum.org>

	* menu.c (about_cb): Add the icon to the about dialog properties.

	* gnobots2.desktop.in: 
	* gnobots.c: 
	* Makefile.am: Install both png and svg icons into the icon theme
	and set the icon by name.

2006-03-28  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Patch from Thomas Thurman to upgrade popt to
	GOption. Minor fixes as suggested by Paolo Borelli. Converted
	gnome_window_icon_... to gtk_window_set_default... .

2006-03-26  Callum McKenzie  <callum@spooky-possum.org>

	* game.c (update_arena): Make sure a player killed by the last two
	robots colliding on top of him stays dead. Fixes bug #335920.

2006-03-22  Callum McKenzie  <callum@spooky-possum.org>

	* help/C/gnobots2.xml: Remove the doctable link, it was broken
	*and* being used inappropriately. Replaced with the 